GET /cavalier/:cavalierId/competition/:competitionId
